// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup renders as a basic primary button group 1`] = `
<div
  className="btnGroup__Test__root btnGroup__Test---orientation-10-horizontal"
>
  <button
    className="btn__Test__root btn__Test---variant-7-primary btn__Test---tone-4-lead btn__Test---vol-1-3"
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="btn__Test__inner"
    >
      One
    </span>
  </button>
  <button
    className="btn__Test__root btn__Test---variant-7-primary btn__Test---tone-4-lead btn__Test---vol-1-3"
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="btn__Test__inner"
    >
      Two
    </span>
  </button>
  <button
    className="btn__Test__root btn__Test---variant-7-primary btn__Test---tone-4-lead btn__Test---vol-1-3"
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="btn__Test__inner"
    >
      Three
    </span>
  </button>
</div>
`;

exports[`ButtonGroup renders button group with all buttons disabled 1`] = `
<div
  className="btnGroup__Test__root btnGroup__Test---orientation-10-horizontal btnGroup__Test--isDisabled"
>
  <button
    className="btn__Test__root btn__Test---variant-5-quiet btn__Test---tone-4-lead btn__Test---vol-1-3 btn__Test--isDisabled"
    disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="btn__Test__inner"
    >
      One
    </span>
  </button>
  <button
    className="btn__Test__root btn__Test---variant-5-quiet btn__Test---tone-4-lead btn__Test---vol-1-3 btn__Test--isDisabled"
    disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="btn__Test__inner"
    >
      Two
    </span>
  </button>
  <button
    className="btn__Test__root btn__Test---variant-5-quiet btn__Test---tone-4-lead btn__Test---vol-1-3 btn__Test--isDisabled"
    disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="btn__Test__inner"
    >
      Three
    </span>
  </button>
</div>
`;

exports[`ButtonGroup renders buttons with additional class name 1`] = `
<div
  className="btnGroup__Test__root btnGroup__Test---orientation-10-horizontal"
>
  <button
    className="btn__Test__root btn__Test---variant-5-quiet btn__Test---tone-4-lead btn__Test---vol-1-4"
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="btn__Test__inner"
    >
      One
    </span>
  </button>
  <button
    className="btn__Test__root btn__Test---variant-5-quiet btn__Test---tone-4-lead btn__Test---vol-1-5 btn-group-btn-item-applied"
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="btn__Test__inner"
    >
      Two
    </span>
  </button>
  <button
    className="btn__Test__root btn__Test---variant-5-quiet btn__Test---tone-4-lead btn__Test---vol-1-4"
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="btn__Test__inner"
    >
      Three
    </span>
  </button>
</div>
`;

exports[`ButtonGroup renders buttons with correct style class if overridden 1`] = `
<div
  className="btnGroup__Test__root btnGroup__Test---orientation-10-horizontal"
>
  <button
    className="btn__Test__root btn__Test---variant-5-quiet btn__Test---tone-7-support btn__Test---vol-1-4"
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="btn__Test__inner"
    >
      One
    </span>
  </button>
  <button
    className="btn__Test__root btn__Test---variant-5-quiet btn__Test---tone-4-info btn__Test---vol-1-5 btn-group-btn-override"
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="btn__Test__inner"
    >
      Two
    </span>
  </button>
  <button
    className="btn__Test__root btn__Test---variant-5-quiet btn__Test---tone-7-support btn__Test---vol-1-4"
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="btn__Test__inner"
    >
      Three
    </span>
  </button>
</div>
`;

exports[`ButtonGroup renders child buttons with style classes for #tone, #variant, #vol and #buttonClassName 1`] = `
<div
  className="btnGroup__Test__root btnGroup__Test---orientation-10-horizontal"
>
  <button
    className="btn__Test__root btn__Test---variant-9-secondary btn__Test---tone-5-alert btn__Test---vol-1-6"
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="btn__Test__inner"
    >
      One
    </span>
  </button>
  <button
    className="btn__Test__root btn__Test---variant-9-secondary btn__Test---tone-5-alert btn__Test---vol-1-6"
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="btn__Test__inner"
    >
      Two
    </span>
  </button>
  <button
    className="btn__Test__root btn__Test---variant-9-secondary btn__Test---tone-5-alert btn__Test---vol-1-6"
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="btn__Test__inner"
    >
      Three
    </span>
  </button>
</div>
`;

exports[`ButtonGroup renders vertical button group 1`] = `
<div
  className="btnGroup__Test__root btnGroup__Test---orientation-8-vertical"
>
  <button
    className="btn__Test__root btn__Test---variant-5-quiet btn__Test---tone-4-lead btn__Test---vol-1-1"
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="btn__Test__inner"
    >
      One
    </span>
  </button>
  <button
    className="btn__Test__root btn__Test---variant-5-quiet btn__Test---tone-4-lead btn__Test---vol-1-1"
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="btn__Test__inner"
    >
      Two
    </span>
  </button>
  <button
    className="btn__Test__root btn__Test---variant-5-quiet btn__Test---tone-4-lead btn__Test---vol-1-1"
    onBlur={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <span
      className="btn__Test__inner"
    >
      Three
    </span>
  </button>
</div>
`;
